--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/jekyll-site" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-destination: docs
+# destination: docs
 twitter_username: jekyllrb
 github_username:  jekyll
 
