--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
+collections:
+    projects:
+        output: true
+        # permalink: /jekyll-site/:collection/:name
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
