--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: a portfolio for p5.js projects
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -21,9 +21,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/jekyll-p5-portfolio" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# destination: docs
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: benjaminhabert
+github_username:  benjaminhabert
 
 # Build settings
 markdown: kramdown
@@ -34,7 +33,6 @@ plugins:
 collections:
     projects:
         output: true
-        # permalink: /jekyll-site/:collection/:name
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
