--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: a portfolio for p5.js projects
-email: your-email@example.com
+title: Artes Multimediales (cátedra Lacabanne)
+email: raul.lacabanne@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/jekyll-p5-portfolio" # the subpath of your site, e.g. /blog
+  Este es un espacio donde se puede visitar los trabajos realizados por las y los estudiantes que cursaron las asignaturas Artes Multiemdiales 1 y Artes Multimediales 4 pertenecientes a la Licenciatura en Artes Multimediales del Área Transdepartamental de Artes Multimediales - Universidad Nacional de las Artes - Ciudad Autónoma de Buenos Aires - Argentina.
+baseurl: "/am-lacabanne" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: benjaminhabert
-github_username:  benjaminhabert
+twitter_username: raullacabanne
+github_username:  knnv-ar
 
 # Build settings
 markdown: kramdown
