--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Artes Multimediales (cátedra Lacabanne)
+title: <la-piscine> galería de arte digital
 email: raul.lacabanne@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Este es un espacio expositivo de arte digital contemporáneo donde se puede visitar todos los trabajos realizados por los estudiantes que cursaron las asignaturas Artes Multimediales 1 y Artes Multimediales 4 pertenecientes a la Licenciatura en Artes Multimediales del Área Transdepartamental de Artes Multimediales de la Universidad Nacional de las Artes (Ciudad Autónoma de Buenos Aires - Argentina). Este sitio es un fork de la plantilla portfolio de Benjamin Habert (https://github.com/benjaminhabert). Copyleft 2020-2022.
-baseurl: "/am-lacabanne" # the subpath of your site, e.g. /blog
+  <la-piscine> es una galería de arte digital que exhibe los trabajos realizados por los estudiantes que cursaron las asignaturas Artes Multimediales 1 y 4 pertenecientes a la Licenciatura en Artes Multimediales del Área Transdepartamental de Artes Multimediales de la Universidad Nacional de las Artes (Ciudad Autónoma de Buenos Aires - Argentina). Este sitio está desarrollado a partir de un fork de la plantilla portfolio de Benjamin Habert (https://github.com/benjaminhabert). Copyleft 2020-2022.
+baseurl: "/la-piscine" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: raullacabanne
 github_username:  knnv-ar
